pristma initial migrate

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,13 @@
 GCS_BUCKET_NAME=your-gcs-bucket-name
 GCS_KEYFILE=path/to/your/gcs-keyfile.json
-DATABASE_URL="postgresql://postgres:postgres@db:5432/dam"
+
+# Database configuration
+# For local development with PostgreSQL, use:
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/dam"
+
 PORT=3000
 
-# PostgreSQL specific variables
+# PostgreSQL specific variables (used with Docker)
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=dam
