--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/storage": "^7.17.3",
+    "@prisma/adapter-pg": "^7.0.0",
     "@prisma/client": "^7.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "multer": "^2.0.2",
+    "pg": "^8.16.3",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.10.1",
+    "@types/pg": "^8.15.6",
     "@types/uuid": "^10.0.0",
     "prisma": "^7.0.0",
     "ts-node-dev": "^2.0.0",
