--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,6 @@ GCS_KEYFILE=path/to/your/gcs-keyfile.json
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/dam"
 
+REDIS_URL="redis://localhost:6379"
+
 PORT=3000
